# BoomBoomEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMakeConfigFiles/: root_directory.h.in
Engine/: CMakeLists.txt
Examples/: CMakeLists.txt  audio-test.cpp  ecs_example.cpp  engineTest.cpp  ex_openal.cpp  loadSong.cpp  main.cpp  playSong.cpp
Headers/System/: EBO.h  Mesh.h  Model.h  VAO.h  VBO.h  basic_shapes.h  camera.h  shaderClass.h  shape.h  texture.h
Libraries/glad/: CMakeLists.txt
Libraries/glad/include/glad/: glad.h
Resources/Models/disc/: license.txt  scene.gltf
Resources/Models/disc2/: disc.mtl
Resources/Models/frisbee_google/: license.txt  scene.gltf
Resources/Models/note4/: note.mtl
Resources/Models/star_platinum_disc/: license.txt  scene.gltf
Resources/Models/tron_disc/: license.txt  scene.gltf
Resources/Models/ultimate_frisbee/: license.txt  scene.gltf
Resources/Shaders/: default.frag  default.vert
Songs/default/: data.song
Songs/demo/: data.song
Songs/test/: data.song
Test/source/: main.cpp
source/: Application.cpp  Application.h  CMakeLists.txt  Engine.h  console_print.cpp  console_print.h  main.cpp  root_directory.h  stb.cpp
source/Audio/: AudioManager.h  AudioMaster.h  MusicBuffer.cpp  MusicBuffer.h  SoundLibrary.h  SoundSource.cpp  SoundSource.h
source/Components/: component.cpp  component.h
source/Entities/: Controller.cpp  Controller.h  ControllerNote.cpp  ControllerNote.h  Cursor.cpp  Cursor.h  Note.cpp  Note.h
source/Examples/: CMakeLists.txt  main.cpp
source/Stage/: stage.cpp  stage.h
source/System/: CMakeLists.txt  Camera.cpp  EBO.cpp  EBO.h  GameObject.cpp  GameObject.h  Mesh.cpp  Model.cpp  Song.cpp  Song.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Window.cpp  Window.h  basic_shapes.cpp  camera.h  shaderClass.cpp  shape.cpp  texture.cpp
